# kokoro-reader

./: CLAUDE.md  README.md  package.json
.github/workflows/: installer.yml
kokoro-sapi/: .gitignore
kokoro-sapi/src/: Dll.cpp  KokoroTTSEngine.cpp  KokoroTTSEngine.h  WorkerClient.cpp  WorkerClient.h  WorkerProtocol.h
src/: App.tsx  bridge.ts  main.tsx  tts.ts  tts.worker.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  model-manifest.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: controls.ini
src-tauri/src/: lib.rs  pipe_server.rs
